[package]
name = "rpex"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpex"
path = "src/lib.rs"

[[bin]]
name = "xrpex"
path = "src/xrpex.rs"

[dependencies]
clap = { version = "4.5.7", features = ["env", "derive"] }
fraction = "0.15.3"
itertools = "0.13.0"
nom = "7.1.3"
num-traits = "0.2.19"
thiserror = "1.0.61"
xrandr = "0.2.0"
